--- a/src/main/resources/templates/edit-user.html
+++ b/src/main/resources/templates/edit-user.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/normalize.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}"/>
     <link rel="shortcut icon" th:href="@{/images/icon.ico}"/>
-    <title>FilmoRate | Films</title>
+    <title>FilmoRate | Edit user</title>
 </head>
 <body>
 <div class="page">
@@ -26,7 +26,7 @@
             <form
                     class="search-box"
                     name="search"
-                    th:action="@{/films}"
+                    th:action="@{/users}"
                     method="get"
             >
                 <label for="search-input"></label>
@@ -45,40 +45,54 @@
         </nav>
     </header>
     <main class="content">
-        <div class="table-content">
-            <table class="table" style="width: 90%">
-                <thead class="thead">
-                <tr>
-                    <th scope="row" style="width: 5%">ID</th>
-                    <th scope="row" style="width: 15%">Name</th>
-                    <th scope="row" style="width: 30%">Description</th>
-                    <th scope="row" style="width: 20%">Duration</th>
-                    <th scope="row" style="width: 10%">Release Date</th>
-                    <th scope="row" style="width: 10%">Actions</th>
-                </tr>
-                </thead>
-                <tbody class="tbody">
-                <tr th:each="film : ${films}">
-                    <td th:text="${film.id}"></td>
-                    <td th:text="${film.name}"></td>
-                    <td th:text="${film.description}"></td>
-                    <td th:text="${film.duration}"></td>
-                    <td
-                            th:text="${#temporals.format(film.releaseDate,'dd.MM.yyyy')}"
-                    ></td>
-                    <td style="width: 0">
-                        <div class="edit-delete">
-                            <a class="button" th:href="@{'films/' + ${film.id} + '/edit'}"
-                            >Edit</a
-                            >
-                            <a class="button" th:href="@{'films/' + ${film.id} + '/delete'}"
-                            >Delete</a
-                            >
-                        </div>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+        <div class="film-adding-form">
+            <h1 class="film-information">
+                Please insert the film information below:
+            </h1>
+            <form
+                    id="add-user-form"
+                    action="#"
+                    th:object="${user}"
+                    method="post"
+                    class="add-form"
+            >
+
+                <div class="form-group">
+                    <label>Name:</label><br/>
+                    <input type="text" th:field="*{name}" class="form-control"/>
+                </div>
+
+                <div class="form-group">
+                    <label>Login:</label><br/>
+                    <input
+                            type="text"
+                            th:field="*{login}"
+                            class="form-control"
+                    />
+                </div>
+
+                <div class="form-group">
+                    <label>Email:</label><br/>
+                    <input
+                            type="email"
+                            th:field="*{email}"
+                            class="form-control"
+                    />
+                </div>
+
+                <div class="form-group">
+                    <label>Birthday:</label><br/>
+                    <input
+                            type="date"
+                            th:field="*{birthday}"
+                            class="form-control"
+                    />
+                </div>
+            </form>
+            <div class="form-buttons">
+                <button type="submit" form="add-user-form">Submit</button>
+                <button type="reset" form="add-user-form">Reset</button>
+            </div>
         </div>
     </main>
     <footer class="footer">
