--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/normalize.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}"/>
     <link rel="shortcut icon" th:href="@{/images/icon.ico}"/>
-    <title>FilmoRate | Films</title>
+    <title>FilmoRate | Users</title>
 </head>
 <body>
 <div class="page">
@@ -26,7 +26,7 @@
             <form
                     class="search-box"
                     name="search"
-                    th:action="@{/films}"
+                    th:action="@{/users}"
                     method="get"
             >
                 <label for="search-input"></label>
@@ -51,27 +51,25 @@
                 <tr>
                     <th scope="row" style="width: 5%">ID</th>
                     <th scope="row" style="width: 15%">Name</th>
-                    <th scope="row" style="width: 30%">Description</th>
-                    <th scope="row" style="width: 20%">Duration</th>
-                    <th scope="row" style="width: 10%">Release Date</th>
+                    <th scope="row" style="width: 20%">Login</th>
+                    <th scope="row" style="width: 20%">Email</th>
+                    <th scope="row" style="width: 15%">Birthday</th>
                     <th scope="row" style="width: 10%">Actions</th>
                 </tr>
                 </thead>
                 <tbody class="tbody">
-                <tr th:each="film : ${films}">
-                    <td th:text="${film.id}"></td>
-                    <td th:text="${film.name}"></td>
-                    <td th:text="${film.description}"></td>
-                    <td th:text="${film.duration}"></td>
-                    <td
-                            th:text="${#temporals.format(film.releaseDate,'dd.MM.yyyy')}"
-                    ></td>
+                <tr th:each="user : ${users}">
+                    <td th:text="${user.id}"></td>
+                    <td th:text="${user.name}"></td>
+                    <td th:text="${user.login}"></td>
+                    <td th:text="${user.email}"></td>
+                    <td th:text="${#temporals.format(user.birthday,'dd.MM.yyyy')}"></td>
                     <td style="width: 0">
                         <div class="edit-delete">
-                            <a class="button" th:href="@{'films/' + ${film.id} + '/edit'}"
+                            <a class="button" th:href="@{'users/' + ${user.id} + '/edit'}"
                             >Edit</a
                             >
-                            <a class="button" th:href="@{'films/' + ${film.id} + '/delete'}"
+                            <a class="button" th:href="@{'users/' + ${user.id} + '/delete'}"
                             >Delete</a
                             >
                         </div>
