--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -39,6 +39,7 @@
                 <a class="button" href="/films/add-film">Add film</a>
                 <a class="button" href="/users/add-user">Add user</a>
                 <a class="button" href="/films">Films</a>
+                <a class="button" href="/films/popular">Popular films</a>
                 <a class="button" href="/users">Users</a>
                 <a class="button" href="/home">Home</a>
             </div>
@@ -60,7 +61,7 @@
 
                 <div class="form-group">
                     <label>Name:</label><br/>
-                    <input type="text" th:field="*{name}" class="form-control"/>
+                    <input type="text" th:field="*{getFirstName}" class="form-control"/>
                 </div>
 
                 <div class="form-group">
