--- a/src/main/resources/templates/get-film-by-id.html
+++ b/src/main/resources/templates/get-film-by-id.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/normalize.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}"/>
     <link rel="shortcut icon" th:href="@{/images/icon.ico}"/>
-    <title>FilmoRate | Users</title>
+    <title>FilmoRate | Film</title>
 </head>
 <body>
 <div class="page">
@@ -26,7 +26,7 @@
             <form
                     class="search-box"
                     name="search"
-                    th:action="@{/users}"
+                    th:action="@{/films}"
                     method="get"
             >
                 <label for="search-input"></label>
@@ -39,7 +39,6 @@
                 <a class="button" href="/films/add-film">Add film</a>
                 <a class="button" href="/users/add-user">Add user</a>
                 <a class="button" href="/films">Films</a>
-                <a class="button" href="/films/popular">Popular films</a>
                 <a class="button" href="/users">Users</a>
                 <a class="button" href="/home">Home</a>
             </div>
@@ -51,24 +50,29 @@
                 <thead class="thead">
                 <tr>
                     <th scope="row" style="width: 15%">Name</th>
-                    <th scope="row" style="width: 20%">Login</th>
-                    <th scope="row" style="width: 20%">Email</th>
-                    <th scope="row" style="width: 15%">Birthday</th>
-                    <th scope="row" style="width: 15%">Friends</th>
-                    <th scope="row" style="width: 10%">More info</th>
+                    <th scope="row" style="width: 30%">Description</th>
+                    <th scope="row" style="width: 20%">Duration</th>
+                    <th scope="row" style="width: 10%">Release Date</th>
+                    <th scope="row" style="width: 15%">Likes</th>
+                    <th scope="row" style="width: 10%">Actions</th>
                 </tr>
                 </thead>
                 <tbody class="tbody">
-                <tr th:each="user : ${users}">
-                    <td th:text="${user.getFirstName}"></td>
-                    <td th:text="${user.login}"></td>
-                    <td th:text="${user.email}"></td>
-                    <td th:text="${#temporals.format(user.birthday,'dd.MM.yyyy')}"></td>
-                    <td th:text="${user.friends.size()}"></td>
+                <tr>
+                    <td th:text="${film.name}"></td>
+                    <td th:text="${film.description}"></td>
+                    <td th:text="${film.duration}"></td>
+                    <td
+                            th:text="${#temporals.format(film.releaseDate,'dd.MM.yyyy')}"
+                    ></td>
+                    <td th:text="${film.likes.size()}"></td>
                     <td style="width: 0">
                         <div class="edit-delete">
-                            <a class="button" th:href="@{'users/' + ${user.id}}"
-                            >Details</a
+                            <a class="button" th:href="@{${film.id} + '/edit'}"
+                            >Edit</a
+                            >
+                            <a class="button" th:href="@{${film.id} + '/delete'}"
+                            >Delete</a
                             >
                         </div>
                     </td>
