--- a/src/main/resources/templates/popular.html
+++ b/src/main/resources/templates/popular.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" th:href="@{/css/normalize.css}"/>
   <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}"/>
   <link rel="shortcut icon" th:href="@{/images/icon.ico}"/>
-  <title>FilmoRate | Homepage</title>
+  <title>FilmoRate | Films</title>
 </head>
 <body>
 <div class="page">
@@ -45,10 +45,38 @@
       </div>
     </nav>
   </header>
-  <main class="content-homepage">
-    <div class="heading">
-      <h1 class="title">Sorry, we cannot find anything.</h1>
-      <h2 class="subtitle">Please try again.</h2>
+  <main class="content">
+    <div class="table-content">
+      <table class="table" style="width: 90%">
+        <thead class="thead">
+        <tr>
+          <th scope="row" style="width: 15%">Name</th>
+          <th scope="row" style="width: 30%">Description</th>
+          <th scope="row" style="width: 20%">Duration</th>
+          <th scope="row" style="width: 15%">Release Date</th>
+          <th scope="row" style="width: 15%">Likes</th>
+          <th scope="row" style="width: 10%">More info</th>
+        </tr>
+        </thead>
+        <tbody class="tbody">
+        <tr th:each="film : ${films}">
+          <td th:text="${film.name}"></td>
+          <td th:text="${film.description}"></td>
+          <td th:text="${film.duration}"></td>
+          <td
+                  th:text="${#temporals.format(film.releaseDate,'dd.MM.yyyy')}"
+          ></td>
+          <td th:text="${film.likes.size()}"></td>
+          <td style="width: 0">
+            <div class="edit-delete">
+              <a class="button" th:href="@{${film.id}}"
+              >Details</a
+              >
+            </div>
+          </td>
+        </tr>
+        </tbody>
+      </table>
     </div>
   </main>
   <footer class="footer">
