refactor: change login page

--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/normalize.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}"/>
-    <link rel="shortcut icon" th:href="@{/images/icon.ico}"/>
+    <link rel="shortcut icon" th:href="@{img}"/>
     <title>FilmoRate | Add user</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
             <a class="logo" href="/home"
             ><img
                     class="logo__filmorate"
-                    src="/images/logo_filmorate.png"
+                    src="/img/logo_filmorate.png"
                     alt="Логотип ФильмоРейт"
             /></a>
             <div class="heading">
@@ -103,7 +103,7 @@
             <a class="github" href="https://github.com/B10nicle"
             ><img
                     class="logo__github"
-                    src="/images/logo_github.svg"
+                    src="/img/logo_github.svg"
                     alt="Логотип ГитХаб"
             /></a>
         </div>
