--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,88 +1,121 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Login</title>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/normalize.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}"/>
+    <link rel="shortcut icon" th:href="@{img}"/>
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
           integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
           crossorigin="anonymous">
+    <title>FilmoRate | Login</title>
 </head>
 <body>
-
-<!-- nav panel -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Панель навигации</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Переключатель навигации">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Главная</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Рекомендуемые</a>
-                </li>
-            </ul>
+<div class="page">
+    <header>
+        <div class="header">
+            <a class="logo" href="/home"
+            ><img
+                    class="logo__filmorate"
+                    src="/img/logo_filmorate.png"
+                    alt="Логотип ФильмоРейт"
+            /></a>
+            <div class="heading">
+                <h1 class="title"><a class="title" href="/home">FilmoRate</a></h1>
+                <h2 class="subtitle">Interactive panel for films selection</h2>
+            </div>
+            <form
+                    class="search-box"
+                    name="search"
+                    th:action="@{/films}"
+                    method="get"
+            >
+                <label for="search-input"></label>
+                <input id="search-input" type="text" name="keyword"/>
+                <button type="submit">Search</button>
+            </form>
         </div>
-    </div>
-</nav>
+        <nav class="buttons-box">
+            <div class="buttons">
+                <a class="button" href="/films/add-film">Add film</a>
+                <a class="button" href="/users/add-user">Add user</a>
+                <a class="button" href="/films">Films</a>
+                <a class="button" href="/films/popular">Popular films</a>
+                <a class="button" href="/users">Users</a>
+                <a class="button" href="/home">Home</a>
+            </div>
+        </nav>
+    </header>
+    <main class="content">
+        <!-- registration form -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
 
-<!-- registration form -->
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+                    <br>
+                    <!-- login form -->
+                    <h1>Login Page</h1>
+                    <form th:action="@{/login}" method="post">
 
-            <br>
-            <!-- login form -->
-            <h1>Login Page</h1>
-            <form th:action="@{/login}" method="post">
-
-                <!-- error message -->
-                <div th:if="${param.error}">
-                    <div class="alert alert-danger">Invalid username or password</div>
-                </div>
-
-                <!-- logout message -->
-                <div th:if="${param.logout}">
-                    <div class="alert alert-info">You have been logged out</div>
-                </div>
-
-                <div class="form-group">
-                    <label class="control-label" for="username">
-                        Username:
-                    </label>
-                    <input type="text" id="username" class="form-control" name="username" placeholder="Enter email"
-                           autofocus="autofocus"/>
-                </div>
-
-                <div class="form-group">
-                    <label class="control-label" for="password">
-                        Password:
-                    </label>
-                    <input type="password" id="password" class="form-control" name="password"
-                           placeholder="Enter password"/>
-                </div>
-
-                <br>
-
-                <div class="form-group">
-                    <div class="row">
-                        <div class="col-sm-6 col-sm-offset-3">
-                            <input type="submit" name="login-submit" id="login-submit"
-                                   class="form-control btn btn-primary" value="Login"/>
+                        <!-- error message -->
+                        <div th:if="${param.error}">
+                            <div class="alert alert-danger">Invalid username or password</div>
                         </div>
+
+                        <!-- logout message -->
+                        <div th:if="${param.logout}">
+                            <div class="alert alert-info">You have been logged out</div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="control-label" for="username">
+                                Username:
+                            </label>
+                            <input type="text" id="username" class="form-control" name="username"
+                                   placeholder="Enter email"
+                                   autofocus="autofocus"/>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="control-label" for="password">
+                                Password:
+                            </label>
+                            <input type="password" id="password" class="form-control" name="password"
+                                   placeholder="Enter password"/>
+                        </div>
+
+                        <br>
+
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-sm-6 col-sm-offset-3">
+                                    <input type="submit" name="login-submit" id="login-submit"
+                                           class="form-control btn btn-primary" value="Login"/>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                    <div class="form-group">
+                        <span>New User? <a href="/" th:href="@{/registration}">Register here</a></span>
                     </div>
                 </div>
-            </form>
-            <div class="form-group">
-                <span>New User? <a href="/" th:href="@{/registration}">Register here</a></span>
             </div>
         </div>
-    </div>
+    </main>
+    <footer class="footer">
+        <div class="links">
+            <a class="author" href="https://github.com/B10nicle">Oleg Khilko</a>
+            <a class="github" href="https://github.com/B10nicle"
+            ><img
+                    class="logo__github"
+                    src="/img/logo_github.svg"
+                    alt="Логотип ГитХаб"
+            /></a>
+        </div>
+    </footer>
 </div>
 </body>
 </html>
