--- a/src/main/resources/templates/add-film.html
+++ b/src/main/resources/templates/add-film.html
@@ -48,7 +48,7 @@
     <main class="content">
         <div class="film-adding-form">
             <h1 class="film-information">
-                Please insert the film information below:
+                Please insert the user information below:
             </h1>
             <form
                     id="add-film-form"
