--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -60,36 +60,20 @@
             >
 
                 <div class="form-group">
-                    <label>Name:</label><br/>
-                    <input type="text" th:field="*{getFirstName}" class="form-control"/>
+                    <label>First name:</label><br/>
+                    <input type="text" th:field="*{firstName}" class="form-control"/>
                 </div>
 
                 <div class="form-group">
-                    <label>Login:</label><br/>
-                    <input
-                            type="text"
-                            th:field="*{login}"
-                            class="form-control"
-                    />
+                    <label>Last name:</label><br/>
+                    <input type="text" th:field="*{lastName}" class="form-control"/>
                 </div>
 
                 <div class="form-group">
                     <label>Email:</label><br/>
-                    <input
-                            type="email"
-                            th:field="*{email}"
-                            class="form-control"
-                    />
+                    <input type="email" th:field="*{email}" class="form-control"/>
                 </div>
 
-                <div class="form-group">
-                    <label>Birthday:</label><br/>
-                    <input
-                            type="date"
-                            th:field="*{birthday}"
-                            class="form-control"
-                    />
-                </div>
             </form>
             <div class="form-buttons">
                 <button type="submit" form="add-user-form">Submit</button>
