--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -50,21 +50,17 @@
             <table class="table" style="width: 90%">
                 <thead class="thead">
                 <tr>
-                    <th scope="row" style="width: 15%">Name</th>
-                    <th scope="row" style="width: 20%">Login</th>
+                    <th scope="row" style="width: 15%">First name</th>
+                    <th scope="row" style="width: 20%">Last name</th>
                     <th scope="row" style="width: 20%">Email</th>
-                    <th scope="row" style="width: 15%">Birthday</th>
-                    <th scope="row" style="width: 15%">Friends</th>
                     <th scope="row" style="width: 10%">More info</th>
                 </tr>
                 </thead>
                 <tbody class="tbody">
                 <tr th:each="user : ${users}">
-                    <td th:text="${user.getFirstName}"></td>
-                    <td th:text="${user.login}"></td>
+                    <td th:text="${user.firstName}"></td>
+                    <td th:text="${user.lastName}"></td>
                     <td th:text="${user.email}"></td>
-                    <td th:text="${#temporals.format(user.birthday,'dd.MM.yyyy')}"></td>
-                    <td th:text="${user.friends.size()}"></td>
                     <td style="width: 0">
                         <div class="edit-delete">
                             <a class="button" th:href="@{'users/' + ${user.id}}"
